fix layout issue

--- a/src/main/webapp/less/90_project.less
+++ b/src/main/webapp/less/90_project.less
@@ -1770,7 +1770,8 @@ a.menu-item{
      }
  }
  .note-toolbar.panel-heading{
-     height: 46px;
+     min-height: 46px;
+     height: auto;
  }
  .fadeIn{
      -webkit-transition: opacity .5s ease-in-out;
